# revspec-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  SUGGESTION.md  justfile  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: publish.yml  test.yml
demo/: demo.tape  reply.py  spec.md  spec.original.md
docs/superpowers/plans/: 2026-03-16-full-parity-plan.md  2026-03-18-round-diff-view-plan.md
docs/superpowers/specs/: 2026-03-16-full-parity-design.md  2026-03-18-round-diff-view-design.md  2026-03-18-session-start-event-design.md
revspec/: app.py  cli.py  commands.py  comment_screen.py  diff_state.py  hints.py  key_dispatch.py  markdown.py  navigation.py  overlays.py  pager.py  protocol.py  renderer.py  reply.py  state.py  theme.py  watch.py  watcher_service.py
revspec_tui/: app.py  cli.py  comment_screen.py  markdown.py  protocol.py  state.py  theme.py  watch.py
revspec_tui/revspec_tui/: theme.py
skills/revspec/: SKILL.md
tests/: test_app_smoke.py  test_bugfixes.py  test_commands.py  test_diff_state.py  test_hints.py  test_key_dispatch.py  test_markdown.py  test_navigation.py  test_protocol.py  test_renderer.py  test_reply.py  test_state.py  test_watch.py  test_watcher_service.py
tests/fixtures/: test-spec.md
