[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "revspec"
version = "0.1.0"
description = "Terminal-based spec review tool with real-time AI conversation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "icyrainz" }]
keywords = ["spec", "review", "tui", "ai", "claude", "vim", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
revspec = "revspec_tui.cli:main"

[project.urls]
Homepage = "https://github.com/icyrainz/revspec-py"
Repository = "https://github.com/icyrainz/revspec-py"
