[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revspec"
version = "0.4.0"
description = "Terminal-based spec review tool with real-time AI conversation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "icyrainz" }]
keywords = ["spec", "review", "tui", "ai", "claude", "vim", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "textual>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "build",
    "twine",
]

[project.scripts]
revspec = "revspec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["revspec"]

[project.urls]
Homepage = "https://github.com/icyrainz/revspec-py"
Repository = "https://github.com/icyrainz/revspec-py"
